Updated link to the Wikipedia

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <footer>
-            <p>If you have time, you should read more about this incredible human being on his <a href="#">Wikipedia entry</a>.</p>
+            <p>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry</a>.</p>
         </footer>
     </main>
 </body>
